# combine

./: .gitignore  Cargo.toml  justfile  netlify.toml
.cargo/: config.toml
assets/levels/: test.level
assets/shaders/: billboard.wgsl
client/: Cargo.toml
client/assets/: combo-tooltip.png~  defs.yaml  gnome.png~  tree.png~
client/assets/editor/: buildable-circle.png~  path-start.png~
client/assets/menus/: main-menu.png~
client/assets/music/: README.txt
client/assets/shaders/: billboard.wgsl
client/assets/ui/: top-background-gradient.png-autosave.kra
client/src/: app.rs  main.rs  net.rs  settings.rs  shader.rs  states.rs
client/src/states/: attr_editor.rs  connecting.rs  disconnected.rs  editor.rs  enter_name.rs  help.rs  loading_level.rs  main_menu.rs  map_editor.rs  playing.rs  splash.rs  waiting_for_random.rs
client/src/states/editor/: add_path.rs  add_sprite.rs  load_map.rs  menu.rs  move_entities.rs  new.rs  path_lines.rs  save_map.rs
client/src/states/map_editor/: add_buildable.rs  add_path.rs  add_sprite.rs  init.rs  input_events.rs  load_map.rs  menu.rs  new.rs  no_pointer_capture.rs  path_lines.rs  save_map.rs
client/src/states/playing/: camera.rs  console.rs  creeps.rs  debug_lines.rs  destroy_entities.rs  effect_bubble.rs  floaty_text.rs  game_over.rs  health_bars.rs  hover_stats.rs  hurt_entities.rs  init.rs  left_click.rs  projectiles.rs  spawn_entities.rs  time.rs  tooltips.rs  top_helper_text.rs  ui.rs  update_player.rs  update_positions.rs
common/: Cargo.toml
common/src/: lib.rs  protocol.rs
deploy/: WIN-README.txt  towercombo.service
game/: Cargo.toml
game/assets/: defs.yaml  game.textures
game/assets/levels/: test.level  test.yaml
game/src/: app.rs  camera.rs  level.rs  main.rs  net.rs  shader.rs  states.rs  textures.rs
game/src/states/: connecting.rs  loading.rs  loading_level.rs  main_menu.rs  playing.rs  spawn_entities.rs  splash.rs  waiting_for_random.rs
game/src/states/playing/: creeps.rs  left_click.rs  level.rs  spawn_entities.rs
server/: Cargo.toml
server/src/: cold.rs  create_games.rs  creeps.rs  damage.rs  destroy.rs  events.rs  game_info.rs  game_over.rs  init.rs  main.rs  match_randoms.rs  new_entities.rs  release_creeps.rs  server_player.rs  spawn_entities.rs  state.rs  stats.rs  tick.rs  time.rs  towers.rs
shared/: Cargo.toml
shared/src/: auth.rs  game.rs  game_info.rs  join_game.rs  level.rs  lib.rs  player_name.rs  protocol.rs  random_game.rs  ticks.rs
shared/src/game/: components.rs  defs.rs  destroyment_method.rs  game_info.rs  level.rs  managed_game.rs  owner.rs  path.rs  player.rs  position.rs  shared_game.rs  towers.rs
shared/src/protocol/: auth.rs  cold_creep.rs  combo_creep_request.rs  combo_tower_request.rs  destroy_entity.rs  game_over.rs  game_ready.rs  hot_creep.rs  hurt_entity.rs  join_friend_game.rs  join_random_game.rs  net_position.rs  place_tower.rs  position.rs  release_creep.rs  request_tower_placement.rs  server_message.rs  spawn_entity.rs  update_player.rs  update_position.rs
src/: bottom_quad.rs  camera.rs  level.rs  main.rs  other_systems.rs  settings.rs  textures.rs
web/: index.html
