[package]
name = "combine"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.0"
bevy_common_assets = { version = "0.3.0", features = ["yaml"] }
bevy_egui = "0.15.1"


serde = "1.0.143"