[package]
name = "towercombo"
version = "0.1.0"
edition = "2021"

[features]
dev = ["shared/dev"]
prod = ["shared/prod"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
shared = { path = "../shared" }

#naia-bevy-client = "0.10.2"
naia-bevy-client = { path = "../../naia/adapters/bevy/client" }
#naia-bevy-client = { git = "https://github.com/naia-lib/naia", rev = "397f2c4586f0e43e50e97363e9381a79eaec618b" }

bevy = "0.8.1"
bevy_egui = "0.15.1"
bevy-inspector-egui = "0.12.1"
iyes_loopless = "0.7.1"
bevy_mod_raycast = "0.6.2"
bevy_prototype_lyon = "0.6.0"
bevy_prototype_debug_lines = { version = "0.8", features = ["3d"] }

serde = "1.0.143"
miette = "5.3.0"
clap = { version = "3.2.17", features = ["derive"] }
rand = "0.8.5"

# For updating texture sizes.
glob = "0.3"
#image = { version = "0.24", features = ["png"] }
image = "0.24.3"
serde_yaml = "0.9.9"

# Sentry doesn't currently build with wasm
# https://github.com/getsentry/sentry-rust/issues/226
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.sentry]
version = "0.27.0"
