[package]
name = "towercombo"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
shared = { path = "../shared" }
naia-bevy-client = "0.10.2"

bevy = "0.8.0"
bevy_common_assets = { version = "0.3.0", features = ["yaml"] }
bevy_egui = "0.15.1"
bevy-inspector-egui = "0.12.1"
iyes_loopless = "0.7.1"
bevy_mod_raycast = "0.6.2"

serde = "1.0.143"
miette = "5.3.0"
clap = { version = "3.2.17", features = ["derive"] }

# For updating texture sizes.
glob = "0.3"
#image = { version = "0.24", features = ["png"] }
image = "0.24.3"
serde_yaml = "0.9.9"