[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
use-udp = [ "naia-bevy-server/use-udp" ]
use-webrtc = [ "naia-bevy-server/use-webrtc" ]

[dependencies]
shared = { path = "../shared" }

naia-bevy-server = "0.10.2"

bevy_app = { version = "0.8.0", default-features = false }
bevy_core = { version = "0.8.0", default-features = false }
bevy_ecs = { version = "0.8.0", default-features = false }
bevy_log = { version = "0.8.0", default-features = false }
bevy_time = { version = "0.8.0", default-features = false }
