[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
use-udp = ["naia-bevy-server/use-udp"]
use-webrtc = ["naia-bevy-server/use-webrtc"]

[dependencies]
shared = { path = "../shared" }

#naia-bevy-server = "0.10.2"
naia-bevy-server = { path = "../../naia/adapters/bevy/server" }
#naia-bevy-server = { git = "https://github.com/naia-lib/naia", rev = "397f2c4586f0e43e50e97363e9381a79eaec618b" }

bevy_app = { version = "0.8.1", default-features = false }
bevy_core = { version = "0.8.1", default-features = false }
bevy_ecs = { version = "0.8.1", default-features = false }
bevy_log = { version = "0.8.1", default-features = false }
bevy_time = { version = "0.8.1", default-features = false }
bevy_utils = { version = "0.8.1", default-features = false }
bevy_math = { version = "0.8.1", default-features = false }
bevy_transform = { version = "0.8.1", default-features = false }

serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.10"
rand = "0.8.5"
clap = { version = "3.2.17", features = ["derive"] }
sentry = "0.27.0"