[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = { version = "0.8", default-features = false }
bevy_math = { version = "0.8", default-features = false }
naia-shared = "0.10.2"
cfg-if = { version = "1.0" }
tracing = "0.1.36"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
serde = "1.0.143"
