[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[features]
prod = []
dev = []

[dependencies]
bevy_ecs = { version = "0.8", default-features = false }
bevy_math = { version = "0.8", default-features = false }
bevy_utils = { version = "0.8", default-features = false }
bevy_transform = { version = "0.8", default-features = false }
bevy_render = { version = "0.8", default-features = false }

#naia-shared = "0.10.2"
naia-shared = { path = "../../naia/shared" }
#naia-shared = { git = "https://github.com/naia-lib/naia", rev = "397f2c4586f0e43e50e97363e9381a79eaec618b" }

cfg-if = { version = "1.0" }
tracing = "0.1.36"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
serde = "1.0.143"
serde_yaml = "0.9.10"
